Add initial Helm chart values for OnlyOffice Document Server
- Enable OnlyOffice by default
- Set replica count to 1
- Configure image repository, tag, and pull policy
- Add service account configuration
- Define pod annotations and labels
- Set up service with ClusterIP type and port 443
- Include ingress configuration (disabled by default)
- Specify resource limits and requests
- Add placeholders for liveness and readiness probes
- Include autoscaling configuration (disabled by default)
- Provide structure for additional volume mounts and volumes
- Add nodeSelector, tolerations, and affinity settings

--- a/onlyOffice/applicaition.yaml
+++ b/onlyOffice/applicaition.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'file://.'
+    repoURL: 'https://github.com/immxmmi/argo-work'
     targetRevision: HEAD
-    path: ./onlyOffice/onlyoffice-helm
+    path: onlyOffice/onlyoffice-helm
     helm:
       valueFiles:
         - values.yaml
