--- a/onlyOffice/onlyoffice-helm/.helmignore
+++ b/onlyOffice/onlyoffice-helm/.helmignore
@@ -3,7 +3,9 @@
 # negation (prefixed with !). Only one pattern per line.
 .DS_Store
 # Common VCS dirs
+.helmignore
 .git/
+.github/
 .gitignore
 .bzr/
 .bzrignore
@@ -21,3 +23,5 @@
 .idea/
 *.tmproj
 .vscode/
+# Test dirs
+sources/litmus/
