--- a/onlyOffice/onlyoffice-helm/Chart.yaml
+++ b/onlyOffice/onlyoffice-helm/Chart.yaml
@@ -1,6 +1,9 @@
 apiVersion: v2
-appVersion: 8.3.3
-description: A helm chart for starting the docker image of onlyoffice
-name: onlyoffice-helm
+name: docs
+description: Helm chart for installing ONLYOFFICE Docs in Kubernetes
+
 type: application
-version: 1.0.6
+
+version: 4.7.0
+
+appVersion: 8.3.3
